# f2filer

./: .gitignore  CLAUDE.md  Cargo.toml  Makefile  README.md  build.rs
.claude/: CLAUDE.local.md  settings.json  settings.local.json
examples/: make_icon.rs
src/: app.rs  audio_viewer.rs  config.rs  dialog.rs  dialog_handler.rs  drag_drop.rs  file_item.rs  file_ops.rs  image_viewer.rs  keyboard.rs  main.rs  panel.rs  shell.rs  sort.rs  undo.rs  video_viewer.rs  viewer.rs
