[package]
name = "f2filer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
chrono = "0.4"
open = "5"
trash = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
hound = "3"
rodio = "0.19"
