[package]
name = "f2filer"
version = "0.1.0"
edition = "2021"

[dependencies]
eframe = "0.31"
chrono = "0.4"
open = "5"
trash = "5"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg", "gif", "bmp", "webp"] }
hound = "3"
rodio = "0.19"
zip = "2"

[target.'cfg(windows)'.dependencies]
windows-core = "0.58"

[target.'cfg(windows)'.dependencies.windows]
version = "0.58"
features = [
    "implement",
    "Win32_Foundation",
    "Win32_Graphics_Gdi",
    "Win32_System_Ole",
    "Win32_System_Com",
    "Win32_System_Com_StructuredStorage",
    "Win32_System_Memory",
    "Win32_System_SystemServices",
    "Win32_UI_Shell",
]
